<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2DACA1A4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_arrow_back_black"
            android:drawablePadding="110dp"
            android:text="@string/your"
            android:textColor="#000"
            android:textSize="24sp"
            app:textAllCaps="false" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/Complete"
            android:textSize="16sp"
            app:textAllCaps="false"

            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:src="@drawable/doc_img" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView7"
            android:layout_toRightOf="@+id/imageView7"
            android:text="@string/firstname"
            android:textColor="#000"
            android:textSize="24sp"

            />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView67"
            android:layout_toRightOf="@+id/imageView7"
            android:background="#2DACA1A4"


            />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/imageView7"
            android:text="@string/lastname"
            android:textColor="#000"
            android:textSize="24sp"

            />

        <TextView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView68"
            android:layout_toRightOf="@+id/imageView7"
            android:background="#2DACA1A4"


            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2DACA1A4" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/mobile"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/phone"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff">

        <TextView
            android:id="@+id/textView72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/id"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/enteremail"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff">

        <TextView
            android:id="@+id/textView74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/gender"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/select"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff">

        <TextView
            android:id="@+id/textView76"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/format"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff">

        <TextView
            android:id="@+id/textView78"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/experience"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView79"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/add"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff">

        <TextView
            android:id="@+id/textView80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:padding="15dp"
            android:text="@string/emergency"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/add details"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff">

        <TextView
            android:id="@+id/textView82"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="15dp"
            android:text="@string/location"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView83"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/titel"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2DACA1A4" />

    <Button
        android:id="@+id/button60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/cornershap_blue"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/save"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:textAllCaps="false"


        />
</LinearLayout>