<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#E91E63"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/baseline_arrow_back_white"
            android:drawablePadding="120dp"
            android:text="@string/EditProfile"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:textAllCaps="false" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/circle" />

        <TextView

            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/chang"
            android:textColor="#ffff"
            android:textSize="16sp"
            app:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#4FC5BFBF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView57"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/Profile" />


        <TextView
            android:id="@+id/textView58"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableLeft="@drawable/circle"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:text="@string/Lance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2DACA1A4" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:singleLine="true"
            android:text="@string/lancebogrol" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableLeft="@drawable/language"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:text="@string/web" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2DACA1A4" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableLeft="@drawable/text"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:text="phasellus fermentum congue imperdiet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2DACA1A4" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/Classified" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableLeft="@drawable/envelope"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:text="@string/email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2DACA1A4" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableLeft="@drawable/telephone"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:text="@string/num" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2DACA1A4" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableLeft="@drawable/group"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:text="@string/female" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2DACA1A4" />

        <Button
            android:id="@+id/button60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/cornershap"
            android:text="@string/done"
            android:textColor="#ffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:textAllCaps="false" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
